   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.64
 ============

 Released on 

 New features and improvements:

   - ofaExportAssistant: have a message when output file is not set.

 Bug fixes:

   - myIAssistant: fix quit on escape (fix key propagation).
   - ofaImportAssistant: fix page 4 label position.

 Other changes:

   - myIWindow: set_settings() is renamed set_geometry_settings() (todo #1282).
   - myIWindow: deprecate my_iwindow_get_keyname() (todo #1283).
   - No more try to read/write user settings from myIWindow geometry settings (todo #1284).
   - ofaAccountBookBin class is renamed to ofaAccountBookArgs.
   - ofaBalanceBin class is renamed to ofaBalanceArgs.
   - ofaLedgerBookBin class is renamed to ofaLedgerBookArgs.
   - ofaLedgerSummaryBin class is renamed to ofaLedgerSummaryArgs.
   - ofaReconcilBin class is renamed to ofaReconcilArgs.
   - ofa_prefs_export_default_folder(): new function.

   + General review of read/write user settings.

-----------------------------------------------------------------------
 Version 0.63
 ============

 Released on 2016-12-17

 New features and improvements:

   - Introduce extension API v2.
   - %BALCR, %BALDB: new formula engine macros.
   - ofaApplication: improve message when command-line arguments are invalid.
   - ofaMiscAuditUI: takes advantage of ofaITVColumnable interface.
   - ofaMiscCollector: remove double frame on each pages (todo #1251).
   - ofaRecPeriodProperties: add missing margins (todo #1249).
   - ofaRecurrentModel: page opens with all rows selected (todo #1280).
   - ofaRecurrentRun: page opens with all rows selected (todo #1281).
   - ofaTVARecordPage: do not allow to generate operations twice (todo #1294).
   - ofaTVARecordPage: have a 'Validate' button for the current selection (todo #1295).
   - ofaTVARecordProperties: remove double correspondence frame.