@@ -402,11 +402,6 @@
 1297 2016-12-18 DossierOpen: make the exercice combo unsensitive if no
                 dossier is selected
 
-1298 2016-12-18 ExportAssistant: ExportFormat: headers_count label and
-                spin button should be insensitive
-
-1299 2016-12-18 ImportFormat: the with_headers check should be insensitive
-
 1300 2016-12-19 Review preferences on opening a new/existing dossier:
                 user_preferences + dossier_preferences + settings in
                 dossier_new and dossier_open
@@ -2120,6 +2115,13 @@
 1295 2016-12-17 VAT Declaration page: have a Validate button (no need to
                 open the declaration itself to validate it)
      2016-12-17 done
+
+1298 2016-12-18 ExportAssistant: ExportFormat: headers_count label and
+                spin button should be insensitive
+     2016-12-19 fixed
+
+1299 2016-12-18 ImportFormat: the with_headers check should be insensitive
+     2016-12-19 fixed
 
 -----------------------------------------------------------------------
  P. Wieser - Created on 2014, may 2nd
